--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Vylvo - Your Linktree Alternative with a Stylish Hacker Theme">
+    <meta name="description" content="Vylvo - Bio Link">
     <title>Unveroleone - Bio ⚙</title>
 	<link rel="icon" type="image/ico" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
